use flex bois to fix the text overflow in the sketch boxes

--- a/src/styles/SketchBox.scss
+++ b/src/styles/SketchBox.scss
@@ -46,3 +46,25 @@
     width: 1px;
     border: 0.5px solid $theme-dark;
 }
+
+.sketch-name {
+    width: 85%;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+.sketch-icon {
+    width: 85%;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+.sketch-metadata{
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
